--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ argon2-cffi-bindings==21.2.0
 bcrypt==4.3.0
 boto3==1.37.11
 botocore==1.37.11
+certifi==2025.1.31
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
@@ -15,6 +16,8 @@ email_validator==2.2.0
 fastapi==0.115.11
 fastapi-users==14.0.1
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
 iniconfig==2.0.0
 jmespath==1.0.1
@@ -31,6 +34,7 @@ pydantic_core==2.27.2
 PyJWT==2.10.1
 pymongo==4.11.2
 pytest==8.3.5
+pytest-asyncio==0.25.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.4.0
