--- a/requirements.txt
+++ b/requirements.txt
@@ -32,7 +32,7 @@ pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 PyJWT==2.10.1
-pymongo==4.6.0
+pymongo>=4.9,<5.0
 pytest==8.3.5
 pytest-asyncio==0.25.3
 python-dateutil==2.9.0.post0
