--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          npm install -g serverless
+          npm install -g serverless@3.21.0
 
       - name: Deploy to AWS Lambda using Serverless
         run: |
