--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,7 @@ jobs:
           npm install -g serverless@3.21.0
 
       - name: Deploy to AWS Lambda using Serverless
-        run: |
-          serverless deploy
+        run: serverless deploy -s stg
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
